# my-fastapi-cookiecutter

./: CLAUDE.md  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.local.yml  docker-compose.production.yml  pyproject.toml
{{cookiecutter.project_slug}}/.envs/.local/: .app  .postgres
{{cookiecutter.project_slug}}/.envs/.production/: .app  .postgres
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/alembic/: env.py  script.py.mako
{{cookiecutter.project_slug}}/compose/local/app/: Dockerfile  entrypoint.sh
{{cookiecutter.project_slug}}/compose/local/postgres/: Dockerfile
{{cookiecutter.project_slug}}/compose/production/app/: Dockerfile  entrypoint.sh
{{cookiecutter.project_slug}}/compose/production/traefik/: traefik.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: celery_app.py  cli.py  main.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/admin/: __init__.py  views.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/auth/: dependencies.py  models.py  router.py  schemas.py  security.py  tasks.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/config/: __init__.py  base.py  local.py  production.py  settings.py  test.py
{{cookiecutter.project_slug}}/tests/: conftest.py  factories.py
{{cookiecutter.project_slug}}/tests/test_auth/: test_router.py  test_security.py
{{cookiecutter.project_slug}}/tests/test_core/: test_email.py
(+11 files in other folders)
